--- a/motivatedCommunication.html
+++ b/motivatedCommunication.html
@@ -174,13 +174,12 @@
         </div>
         <div class="col-12 col-md-6 overview-img-cover">
           <div class="overview-img-cover">
-            <div class="overview-img">
+            <!-- <div class="overview-img">
               <img src="assets/img/overview-1.jpg" alt="img" />
-              <!-- <img src="assets/img/overview-2.jpg" alt="img" /> -->
             </div>
             <div class="overview-img">
               <img src="assets/img/overview-2.jpg" alt="img" />
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -214,14 +213,14 @@
             </div>
             <div class="history-cert">
               <div class="history-cert-img">
-                <a href="assets/img/certificate-1.jpg" data-fancybox="gallery2">
+                <!-- <a href="assets/img/certificate-1.jpg" data-fancybox="gallery2">
                   <img src="assets/img/certificate-1.jpg" alt="img" />
-                </a>
+                </a> -->
               </div>
               <div class="history-cert-img">
-                <a href="assets/img/certificate-1.jpg" data-fancybox="gallery2">
+                <!-- <a href="assets/img/certificate-1.jpg" data-fancybox="gallery2">
                   <img src="assets/img/certificate-1.jpg" alt="img" />
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
