--- a/timeManagement.html
+++ b/timeManagement.html
@@ -207,7 +207,7 @@
               </div>
               <div class="overview-img">
                 <img src="assets/img/time-7.jpg" alt="img" />
-                <img src="assets/img/time-4.jpg" alt="img" />
+                
 
               </div>
             </div>
@@ -244,12 +244,12 @@
               <div class="history-cert">
                 <div class="history-cert-img">
                   <img src="assets/img/time-0.png" alt="img" />
-                  <img src="assets/img/time-2.jpg" alt="img" />
+                  <!-- <img src="assets/img/time-2.jpg" alt="img" /> -->
 
                 </div>
                 <div class="history-cert-img">
                   <img src="assets/img/time-1.png" alt="img" />
-                  <img src="assets/img/time-3.jpg" alt="img" />
+                  <!-- <img src="assets/img/time-3.jpg" alt="img" /> -->
 
                 </div>
               </div>
