--- a/proactiveSlef.html
+++ b/proactiveSlef.html
@@ -210,13 +210,12 @@
           </div>
           <div class="col-12 col-md-6 overview-img-cover">
             <div class="overview-img-cover">
-              <div class="overview-img">
+              <!-- <div class="overview-img">
                 <img src="assets/img/overview-1.jpg" alt="img" />
-                <!-- <img src="assets/img/overview-2.jpg" alt="img" /> -->
               </div>
               <div class="overview-img">
                 <img src="assets/img/overview-2.jpg" alt="img" />
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
