--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,7 @@
 					  <li>
 						<a href="index.html" class='text-center'>Trang chủ</a>
 					  </li>
-					  <li><a href="#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
+					  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
 					  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
 					  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
 					  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
