--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <li>
                       <a href="index.html" class='text-center'>Trang chủ</a>
                     </li>
-                    <li><a href="#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
+                    <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
                     <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
                     <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
                     <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
@@ -1351,7 +1351,8 @@
 
     <!--===================== S-PRICING =====================-->
     <!-- Link đào tạo doanh nghiệp-->
-    <section class="s-pricing" id='trainingHouse'>
+    <section class="s-pricing">
+      <a name='trainingHouse'></a>
       <span class="title-position title-position-right">Quy trình <br> tổ chức</span>
       
       <div class="container">
