--- a/proactiveSlef.html
+++ b/proactiveSlef.html
@@ -85,7 +85,7 @@
                       <li><a href="home-two.html">Home 2</a></li>
                     </ul> -->
                   </li>
-                  <li><a href="./#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>                  <li><a href="seminor.html">Hội thảo</a></li>
+                  <li><a href="index.html#trainingHouse"><span class="text-center">Đào tạo <br> Doanh Nghiệp</span></a></li>                  <li><a href="seminor.html">Hội thảo</a></li>
                   <li><a href="educationBusiness.html"><span class="text-center">Tư vấn <br> Doanh Nghiệp</span></a></li>
                   <li><a href="CSKH.html"><span class="text-center">Tư vấn <br>Doanh Nghiệp CSKH </span></a></li>
                   <li><a href="XTTM.html"><span class="text-center">Xúc tiến<br>Thương mại</span></a></li>
