--- a/PDCA.html
+++ b/PDCA.html
@@ -82,7 +82,7 @@
                     <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
                   <li>
-                    <a href="#trainingHouse" class="text-center"
+                    <a href="index.html#trainingHouse" class="text-center"
                       >Đào tạo Doanh Nghiệp</a
                     >
                   </li>
